--- a/src/css/components/buttons.css
+++ b/src/css/components/buttons.css
@@ -545,7 +545,7 @@
   font-family: var(--font-family) !important;
   font-size: var(--font-size) !important;
   line-height: var(--line-height-md) !important;
-  font-weight: var(--jx-zk-pv) !important;
+  font-weight: var(--font-weight-semibold) !important;
   border-radius: var(--border-radius) !important;
   border-width: 1px !important;
   border-style: solid !important;
@@ -1103,7 +1103,7 @@
   font-family: var(--font-family) !important;
   font-size: var(--font-size) !important;
   line-height: var(--line-height-md) !important;
-  font-weight: var(--jx-zk-pv) !important;
+  font-weight: var(--font-weight-semibold) !important;
   border-radius: var(--border-radius) !important;
   outline: 0 !important;
   padding: 14px 24px !important;
@@ -1237,7 +1237,7 @@ fieldset[disabled] .btn {
   font-family: var(--font-family) !important;
   font-size: var(--font-size) !important;
   line-height: var(--line-height-md) !important;
-  font-weight: var(--jx-zk-pv) !important;
+  font-weight: var(--font-weight-semibold) !important;
   border-radius: var(--border-radius) !important;
   border-width: 1px !important;
   outline: 0 !important;
@@ -1454,7 +1454,7 @@ fieldset[disabled] .btn {
   font-family: var(--font-family) !important;
   font-size: var(--font-size) !important;
   line-height: var(--line-height-md) !important;
-  font-weight: var(--jx-zk-pv) !important;
+  font-weight: var(--font-weight-semibold) !important;
   border-radius: var(--border-radius) !important;
   border-width: 1px !important;
   outline: 0 !important;
@@ -1571,7 +1571,7 @@ fieldset[disabled] .btn {
   font-family: var(--font-family) !important;
   font-size: var(--font-size) !important;
   line-height: var(--line-height-md) !important;
-  font-weight: var(--jx-zk-pv) !important;
+  font-weight: var(--font-weight-semibold) !important;
   border-radius: var(--border-radius) !important;
   border-width: 1px !important;
   outline: 0 !important;
@@ -1695,7 +1695,7 @@ fieldset[disabled] .btn {
   font-family: var(--font-family) !important;
   font-size: var(--font-size) !important;
   line-height: var(--line-height-md) !important;
-  font-weight: var(--jx-zk-pv) !important;
+  font-weight: var(--font-weight-semibold) !important;
   border-radius: var(--border-radius) !important;
   outline: 0 !important;
   padding: 10px !important;
@@ -1727,7 +1727,7 @@ fieldset[disabled] .btn {
   font-family: var(--font-family) !important;
   font-size: var(--font-size) !important;
   line-height: var(--line-height-md) !important;
-  font-weight: var(--jx-zk-pv) !important;
+  font-weight: var(--font-weight-semibold) !important;
   border-radius: var(--border-radius) !important;
   outline: 0 !important;
   padding: 14px 24px !important;
@@ -1751,7 +1751,7 @@ fieldset[disabled] .btn {
   font-family: var(--font-family) !important;
   font-size: var(--font-size) !important;
   line-height: var(--line-height-md) !important;
-  font-weight: var(--jx-zk-pv) !important;
+  font-weight: var(--font-weight-semibold) !important;
   border-radius: var(--border-radius) !important;
   border-width: 1px !important;
   border-style: solid !important;
@@ -1809,7 +1809,7 @@ fieldset[disabled] .btn {
   font-family: var(--font-family) !important;
   font-size: var(--font-size-sm) !important;
   line-height: var(--line-height-sm) !important;
-  font-weight: var(--jx-zk-pv) !important;
+  font-weight: var(--font-weight-semibold) !important;
   border-radius: var(--border-radius) !important;
   outline: 0 !important;
   padding: 8px 16px !important;
@@ -1833,7 +1833,7 @@ fieldset[disabled] .btn {
   font-family: var(--font-family) !important;
   font-size: var(--font-size-sm) !important;
   line-height: var(--line-height-sm) !important;
-  font-weight: var(--jx-zk-pv) !important;
+  font-weight: var(--font-weight-semibold) !important;
   border-radius: var(--border-radius) !important;
   border-width: 1px !important;
   outline: 0 !important;
@@ -1942,7 +1942,7 @@ fieldset[disabled] .btn {
   font-family: var(--font-family);
   font-size: var(--font-size);
   line-height: var(--line-height-md);
-  font-weight: var(--jx-zk-pv);
+  font-weight: var(--font-weight-semibold);
   border-radius: var(--border-radius);
   outline: 0;
   padding: 14px 24px;
@@ -2500,7 +2500,7 @@ fieldset[disabled] .btn {
 .btn-filter__text[class][class] {
   font-size: var(--font-size-xs);
   line-height: var(--line-height-xs);
-  font-weight: var(--jx-zk-pv);
+  font-weight: var(--font-weight-semibold);
   display: none;
 }
 .btn-filter-count[class][class] {
@@ -2526,7 +2526,7 @@ fieldset[disabled] .btn {
   font-size: var(--font-size-xxs);
   line-height: var(--line-height-xxs);
   color: var(--f-mkcy-f);
-  font-weight: var(--h-oqhch);
+  font-weight: var(--font-weight-bold);
 }
 .dir.btn-filter-count__text[class][class] {
   margin-top: var(--spacer-1);
