--- a/src/css/components/cards/card-alt-4.css
+++ b/src/css/components/cards/card-alt-4.css
@@ -118,7 +118,7 @@
   left: 0;
 }
 .card-alt-4[class][class] {
-  font-weight: var(--e-y-j-d-v-j);
+  font-weight: var(--font-weight-normal);
   color: var(--f-k-smk-x);
   position: relative;
 }
@@ -151,7 +151,7 @@
 }
 .card-alt-4__price[class][class],
 .card-alt-4__starting-price[class][class] {
-  font-weight: var(--h-oqhch);
+  font-weight: var(--font-weight-bold);
 }
 .card-alt-4__lite-image-wrapper[class][class] {
   position: relative;
@@ -614,7 +614,7 @@
 }
 .bi6b9fr[class][class].card-alt-4__ratings-container[class][class]
   .card-alt-4__ratings-rating[class][class] {
-  font-weight: var(--jx-zk-pv);
+  font-weight: var(--font-weight-semibold);
 }
 .card-alt-4__title-wrapper[class][class] {
   color: var(--theme_typography-color-primary, var(--f-k-smk-x));
