--- a/src/css/components/cards/card-basic.css
+++ b/src/css/components/cards/card-basic.css
@@ -3,7 +3,7 @@
   color: var(--f-k-smk-x);
   font-size: var(--font-size-md);
   line-height: var(--line-height-lg);
-  font-weight: var(--jx-zk-pv);
+  font-weight: var(--font-weight-semibold);
   display: block;
 }
 .card-basic[class][class] {
