--- a/src/css/components/cards/card-horizontal-outlined.css
+++ b/src/css/components/cards/card-horizontal-outlined.css
@@ -37,7 +37,7 @@
 }
 .card-horizontal-outlined__btn[class][class] {
   color: var(--f-k-smk-x);
-  font-weight: var(--jx-zk-pv);
+  font-weight: var(--font-weight-semibold);
   white-space: nowrap;
 }
 .dir.card-horizontal-outlined__btn[class][class] {
