--- a/src/css/components/explore-filter-menu.css
+++ b/src/css/components/explore-filter-menu.css
@@ -10,7 +10,7 @@
 .explore-filter-menu__price-title[class][class] {
   font-size: var(--font-size);
   line-height: var(--line-height-md);
-  font-weight: var(--e-y-j-d-v-j);
+  font-weight: var(--font-weight-normal);
   color: var(--fo-jk-r-s);
 }
 .dir.explore-filter-menu__price-title[class][class] {
