--- a/src/css/components/header-filter.css
+++ b/src/css/components/header-filter.css
@@ -63,7 +63,7 @@
   font-size: var(--font-size-xs);
   line-height: var(--line-height-xs);
   color: var(--fo-jk-r-s);
-  font-weight: var(--jx-zk-pv);
+  font-weight: var(--font-weight-semibold);
   width: max-content;
   -webkit-tap-highlight-color: transparent;
 }
