--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1083,7 +1083,7 @@
   border-radius: 500px!important;
   color: var(--f-mkcy-f)!important;
   font-size: var(--font-size-xxs)!important;
-  font-weight: var(--h-oqhch)!important;
+  font-weight: var(--font-weight-bold)!important;
   height: 1rem!important;
   min-width: 1rem!important;
   left: 100%!important;
@@ -1646,7 +1646,7 @@
   font-size: var(--font-size);
   line-height: var(--line-height-md);
   color: var(--f-k-smk-x);
-  font-weight: var(--jx-zk-pv)
+  font-weight: var(--font-weight-semibold)
 }
 .dir.t2353uq[class][class] {
   margin-bottom: var(--spacer-4);
@@ -1814,7 +1814,7 @@
   display: flex;
   white-space: nowrap;
   width: 100%;
-  font-weight: var(--jx-zk-pv);
+  font-weight: var(--font-weight-semibold);
   display: flex;
   align-items: center
 }
@@ -1880,7 +1880,7 @@
   color: var(--fo-jk-r-s);
   display: inline-block;
   flex: 0 0 auto;
-  font-weight: var(--e-y-j-d-v-j)
+  font-weight: var(--font-weight-normal)
 }
 .dir-ltr.a90wtny[class][class] {
   margin-left: var(--spacer-5)
@@ -1904,7 +1904,7 @@
   display: flex;
   white-space: nowrap;
   width: 100%;
-  font-weight: var(--e-y-j-d-v-j);
+  font-weight: var(--font-weight-normal);
   display: flex;
   align-items: center
 }
