--- a/src/css/root.css
+++ b/src/css/root.css
@@ -96,11 +96,10 @@
   --line-height-xl: 24px;
   --font-size-md: 18px;
   --line-height-2xl: 28px;
-  --e-y-j-d-v-j: 400;
-  --jx-zk-pv: 600;
-  --h-oqhch: 800;
-  --g-lm-u-p: normal;
-  --mq-yk-l: 0.04em;
+  --font-weight-normal: 400;
+  --font-weight-semibold: 600;
+  --font-weight-bold: 800;
+  --letter-spacing: 0.04em;
   --swiper-theme-color: #007aff;
   --swiper-navigation-size: 44px;
   --border-radius-sm: 4px;
@@ -199,11 +198,10 @@
   --line-height-xl: 24px;
   --font-size-md: 18px;
   --line-height-2xl: 28px;
-  --e-y-j-d-v-j: 400;
-  --jx-zk-pv: 600;
-  --h-oqhch: 800;
-  --g-lm-u-p: normal;
-  --mq-yk-l: 0.04em;
+  --font-weight-normal: 400;
+  --font-weight-semibold: 600;
+  --font-weight-bold: 800;
+  --letter-spacing: 0.04em;
   --jp-carousel-primary-color: #fff;
   --jp-carousel-primary-subtle-color: #999;
   --jp-carousel-bg-color: #000;
@@ -307,11 +305,10 @@
   --line-height-xl: 24px;
   --font-size-md: 18px;
   --line-height-2xl: 28px;
-  --e-y-j-d-v-j: 400;
-  --jx-zk-pv: 600;
-  --h-oqhch: 800;
-  --g-lm-u-p: normal;
-  --mq-yk-l: 0.04em;
+  --font-weight-normal: 400;
+  --font-weight-semibold: 600;
+  --font-weight-bold: 800;
+  --letter-spacing: 0.04em;
   --wp-admin-theme-color: #007cba;
   --wp-admin-theme-color--rgb: 0, 124, 186;
   --wp-admin-theme-color-darker-10: #006ba1;
@@ -428,11 +425,10 @@
     --line-height-xl: 24px;
     --font-size-md: 18px;
     --line-height-2xl: 28px;
-    --e-y-j-d-v-j: 400;
-    --jx-zk-pv: 600;
-    --h-oqhch: 800;
-    --g-lm-u-p: normal;
-    --mq-yk-l: 0.04em;
+    --font-weight-normal: 400;
+    --font-weight-semibold: 600;
+    --font-weight-bold: 800;
+    --letter-spacing: 0.04em;
     --wp-admin-border-width-focus: 1.5px;
   }
 }
