--- a/src/css/components/page-shell.css
+++ b/src/css/components/page-shell.css
@@ -77,7 +77,7 @@
   font-family: var(--font-family) !important;
   font-size: var(--font-size-sm) !important;
   line-height: var(--line-height-sm) !important;
-  font-weight: var(--jx-zk-pv) !important;
+  font-weight: var(--font-weight-semibold) !important;
   border-radius: var(--border-radius) !important;
   border-width: 1px !important;
   outline: 0 !important;
@@ -212,7 +212,7 @@
   font-family: var(--font-family) !important;
   font-size: var(--font-size-sm) !important;
   line-height: var(--line-height-sm) !important;
-  font-weight: var(--jx-zk-pv) !important;
+  font-weight: var(--font-weight-semibold) !important;
   border-radius: var(--border-radius) !important;
   outline: 0 !important;
   padding: 8px !important;
@@ -320,7 +320,7 @@
 .page-shell-mobile__alert-attr-notifcation[class][class]
   .page-shell-mobile__alert-header-text[class][class] {
   color: var(--f-k-smk-x);
-  font-weight: var(--h-oqhch);
+  font-weight: var(--font-weight-bold);
   font-size: var(--font-size-sm);
   line-height: var(--line-height-sm);
 }
